--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <button onclick="check();" class="btn btn-success">Identify Family Member</button>
       <br><br>
 
-      <p style="font-size: 22px;">Object : <span id="result_object_name"></span> </p>
+      <p style="font-size: 22px;">Family Member : <span id="result_object_name"></span> </p>
       <p style="font-size: 22px;">Accuracy : <span id="result_object_accuracy"></span> </p>
     </center>
 
